--- a/Python_DataTypes_Variables.ipynb
+++ b/Python_DataTypes_Variables.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "52397224",
    "metadata": {
     "deletable": false,
@@ -88,11 +88,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "the_value_ten = 10\n",
+    "print (the_value_ten)\n",
+    "\n"
    ]
   },
   {
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "9d0ff161",
    "metadata": {
     "deletable": false,
@@ -134,11 +143,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "lucky = 7\n",
+    "print (lucky)\n",
+    "\n"
    ]
   },
   {
@@ -164,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "6f07e58d",
    "metadata": {
     "deletable": false,
@@ -180,10 +197,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "piethenumber = 3.14\n",
+    "print (piethenumber)\n"
    ]
   },
   {
@@ -209,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "7fbccad3",
    "metadata": {
     "deletable": false,
@@ -225,10 +250,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "myword = True\n",
+    "print (myword)\n",
+    "\n"
    ]
   },
   {
@@ -254,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "1bb7f4a7",
    "metadata": {
     "deletable": false,
@@ -270,10 +304,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kenji and Bailey\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "my_dogs = \"Kenji and Bailey\"\n",
+    "print (my_dogs)\n"
    ]
   },
   {
@@ -299,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "761b7a69",
    "metadata": {
     "deletable": false,
@@ -315,12 +357,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "random_string = \"I am Batman\"  # 11 characters\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (len(random_string))\n",
+    "\n"
    ]
   },
   {
@@ -346,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "3a8d1311",
    "metadata": {
     "deletable": false,
@@ -362,12 +412,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This\n"
+     ]
+    }
+   ],
    "source": [
     "my_string = \"This is MY string!\"\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (my_string[0:4])\n"
    ]
   },
   {
@@ -393,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "e0d690be",
    "metadata": {
     "deletable": false,
@@ -409,13 +466,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (num + flt)\n",
+    "\n"
    ]
   },
   {
@@ -441,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "e1560b4f",
    "metadata": {
     "deletable": false,
@@ -457,13 +522,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210.0\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (num * flt)\n"
    ]
   },
   {
@@ -489,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "cccfd5b6",
    "metadata": {
     "deletable": false,
@@ -505,13 +577,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (num // flt)\n"
    ]
   },
   {
@@ -537,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "id": "9ba57ac6",
    "metadata": {
     "deletable": false,
@@ -553,13 +632,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.5\n"
+     ]
+    }
+   ],
    "source": [
     "num = 20\n",
     "flt = 10.5\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (num%flt)\n"
    ]
   },
   {
@@ -585,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "b9bae71f",
    "metadata": {
     "deletable": false,
@@ -601,13 +687,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 5\n",
     "num2 = 10\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print (num1 > num2)\n",
+    "print (num1 < num2)\n",
+    "print (num1 == num2)\n",
+    "print (num1 != num2)\n",
+    "\n"
    ]
   },
   {
@@ -635,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "id": "4c838653",
    "metadata": {
     "deletable": false,
@@ -651,12 +751,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 5\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(num1)\n",
+    "\n",
+    "num1 += 10\n",
+    "\n",
+    "print(num1)\n",
+    "\n"
    ]
   },
   {
@@ -682,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "id": "7fa9376b",
    "metadata": {
     "deletable": false,
@@ -698,7 +811,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# OR Expression\n",
     "my_bool1 = True or False\n",
@@ -709,8 +832,10 @@
     "# NOT expression\n",
     "my_bool3 = False\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(my_bool1) #OR\n",
+    "print(my_bool2) #AND\n",
+    "print(not my_bool3) #NOT\n",
+    "\n"
    ]
   },
   {
@@ -736,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "id": "4464a8f8",
    "metadata": {
     "deletable": false,
@@ -752,25 +877,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "print('a' < 'b')  \n",
+    "print('a' < 'b')  #a has a smaller unicode value than b, it is alphabetically assigned\n",
     "\n",
     "house = \"Gryffindor\"\n",
     "house_copy = \"Gryffindor\"\n",
     "\n",
-    "print(house == house_copy)\n",
+    "print(house == house_copy) #The comparison of house value to the house_copy value is the same ie true\n",
     "\n",
     "new_house = \"Slytherin\"\n",
     "\n",
-    "print(house == new_house)\n",
+    "print(house == new_house) #Gryffindor == Slytherin is false, those are not the same value ie Gryffindor != Slytherin\n",
     "\n",
-    "print(new_house <= house)\n",
+    "print(new_house <= house) #Gryffindor has a lower unicode value because G comes before S in the alphabet\n",
     "\n",
-    "print(new_house >= house)\n",
+    "print(new_house >= house) #Slytherin has a higher unicode value than Gryffindor\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
@@ -800,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "id": "44f985df",
    "metadata": {
     "deletable": false,
@@ -816,13 +952,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batman\n"
+     ]
+    }
+   ],
    "source": [
     "first_half = \"Bat\"\n",
     "second_half = \"man\"\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "full_name = first_half + second_half\n",
+    "print(full_name)\n",
+    "\n"
    ]
   },
   {
@@ -848,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "201c4eac",
    "metadata": {
     "deletable": false,
@@ -864,12 +1009,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "string1 = \"There's no i in team.\"\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print('eye' in string1) #checking for 'eye in the string\n"
    ]
   },
   {
@@ -895,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "id": "da4a840a",
    "metadata": {
     "deletable": false,
@@ -911,11 +1063,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2.5, 'A string', True]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "List1 = [1, 2.5, \"A string\", True]\n",
+    "print(List1)\n",
+    "\n"
    ]
   },
   {
@@ -941,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "id": "b4adbac0",
    "metadata": {
     "deletable": false,
@@ -957,17 +1118,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(len(List1))\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -981,7 +1149,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+   }
   }
  },
  "nbformat": 4,
